-- Version 2.10.2, released ...

 * In addition to the existing Bedrock wall option it is now also possible to create Barrier block walls
   + In addition, a "roof" option has been added, that will cover the map with a Bedrock or Barrier layer of blocks at the top. Together these options can completely box players in
   + NOTE that Minecraft may spawn you on _top_ of the roof. WorldPainter has no control over that unfortunately
   + NOTE that a bedrock roof will make the map dark, but it won't darken the sky or hide the sun
   + When the Barrier wall is selected, outside the walls will be fixed to endless Void

-- Version 2.10.1, released 13-5-2022

 * Bug fix: fix an error when opening Cave/Tunnel Layer settings that have a Plant layer as floor or roof layer that was saved with a different version
 * Bug fix: fix an error during Merging when the height difference between the world and the existing map is large

-- Version 2.10.0, released 13-5-2022

 * WorldPainter now has a merch store! Go to https://www.worldpainter.net/store/merch to support WorldPainter development
 * Custom Caves/Tunnel layer new functionality:
   + The Custom Caves/Tunnel layer now supports roof layers in addition to floor layers
   + Note that the roof layers are inverted. This includes Custom Objects, so you will have to make any objects you want to place on the roof upside-down (unless you _want_ them to be upside-down of course). A future version will make this inversion optional for Custom Object layers
   + The variation of Custom Caves/Tunnel floor and roof layers can now be configured, so that they are not applied with the same intensity everywhere but can vary randomly
   + The hanging plants have been added to the Custom Plants layer, for use as Cave/Tunnel roof layers. They will work non-inverted as well, but of course they will be upside-down